test_suite/ui/missing_disciminant.stderr
error: Please add an explicit discriminant
 --> $DIR/missing_disciminant.rs:5:5
  |
5 |     OhNoTheresNoDiscriminant,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
